- Fix alignment of saving status in SubHeader component; - Replace hiding editor using visibility by display.

--- a/ClientApp/src/components/itemInfoHeader/itemInfoHeader.module.scss
+++ b/ClientApp/src/components/itemInfoHeader/itemInfoHeader.module.scss
@@ -13,6 +13,8 @@
   }
 
   .loaderSpacer {
+    display: flex;
+    gap: 0.5rem;
     line-height: 3rem;
   }
 }
